@@ -11,6 +11,7 @@ Enhancements::
 
 * allow hyphenation to be turned on and configured using the `base-hyphens` key in the theme (#2161)
 * split out `start_title_page` method from `ink_title_page` to make customization of the title page simpler using an extended converter
+* introduce `start_toc_page` method to handle positioning cursor at first page of TOC
 
 Improvements::
 
